style.css
:root {
  --color-light: #f0f0f0;
  --color-dark: #202020;
  --color-primary: cornflowerblue;
  --color-secondary: gold;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li {
  list-style: none;
}

body {
  background: var(--color-light);
  color: var(--color-dark);
}

.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

header,
footer {
  width: 100%;
  padding: 1rem;
  display: block;
  min-height: 4rem;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  text-align: center;
  background-color: var(--color-primary);
}

header h1 {
  font-size: 1.4rem;
}

menu {
  position: absolute;
  top: 0;
  right: -2.5rem;
  display: flex;
  flex-direction: column;
  padding: 1rem 0;
  font-size: 2rem;
  background: var(--color-secondary);
  opacity: 0.5;
  border-radius: 1rem 0 0 1rem;
  transition: 200ms ease-in-out;
}

menu:hover {
  opacity: 1;
  right: 0;
}

menu li {
  padding: 0 1rem;
  cursor: pointer;
  scale: 0.8;
  transition: 100ms ease-in-out;
}

menu li:hover {
  scale: 1;
}

main {
  position: relative;
  width: 100%;
  padding: 1rem;
  flex: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.quote blockquote p {
  font-size: 1.6rem;
  margin-bottom: 1rem;
  border-left: 5px solid var(--color-primary);
  padding-left: 1rem;
}

.quote figcaption p {
  text-align: right;
  font-style: italic;
}

.quote a {
  color: var(--color-dark);
  text-decoration: none;
  border-bottom: 1px solid var(--color-dark);
}

.quote a:hover {
  color: var(--color-primary);
  border-color: var(--color-primary);
}

